# ES_PCS_26

./: esercizio0.txt
cmake_esercitazione0/passo_2/: CMakeLists.txt  passo2.cpp
cmake_esercitazione0/passo_2/buildd/: CMakeCache.txt  Makefile  cmake_install.cmake  passo2
cmake_esercitazione0/passo_3/: CMakeLists.txt  passo3.h  passo3_functions.cpp  passo3_main.cpp
cmake_esercitazione0/passo_3/build3/: CMakeCache.txt  Makefile  cmake_install.cmake  passo3
esercitazione1/: CMakeLists.txt  eseguibilegpp  esempio_aula.cpp  main.cpp
esercitazione1/build_es1/: CMakeCache.txt  Makefile  eseguibile
esercitazione10/: CMakeLists.txt  cg.hpp  test_cg.cpp
esercitazione2/: CMakeLists.txt  bubble_sort.cpp  figura1.cpp  primi_algoritmi.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  is_sorted.hpp  measure_sorts.cpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  is_sorted.hpp  measure_sorts.cpp  measure_sorts_small.cpp  osservazioni.txt  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_quicksort_modificato.cpp  test_selectionsort.cpp
esercitazione6/: CMakeLists.txt  grafi.hpp  test_grafo1.cpp
esercitazione9/: CMakeLists.txt  contenitori.hpp  main.cpp
progetto_pcs_definitivo/: CMakeLists.txt  cicli.hpp  funzioni.hpp  gc.hpp  main.cpp  netlist.txt  unidirected_edge.hpp  unidirected_graph.hpp
